Don't allow the tab text to be highlighted

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/tab-row.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/tab-row.scss
@@ -38,6 +38,7 @@
         text-align: center;
         cursor: pointer;
         border: 2px solid transparent;
+        user-select: none;
 
         &:hover {
             background-color: $off-white;
