Don't show an empty table in a hierarchy diff
Showing a string that says "No Selected Values" insted of an empty table looks much better.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
@@ -75,6 +75,12 @@
             background-color: rgba($red, .3);
         }
     }
+
+    .no-values {
+        display: block;
+        font-style: italic;
+        margin-bottom: 1em;
+    }
 }
 
 .selection-group-detail {
