--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -1,7 +1,7 @@
 ﻿@import "../../map_modules/variables";
 @import "../../map_modules/mixins";
 
-#iframe-container {
+.iframe-container {
     position: relative;
     height: 100vh;
     width: 100%;
