--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
@@ -6,8 +6,8 @@
     max-width: 100% !important;
 }
 
-#iframe-container {
     position: relative;
+.iframe-container {
     width: 100%;
     height: 20em;
 
@@ -34,10 +34,8 @@
 .go-live-section {
     margin-bottom: 2em;
 
-    #iframe-container,
-    .download-preview,
-    .thumbnailPreview {
         padding: 1em;
+    .iframe-container {
     }
 
     .thumbnailContainer {
