--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
@@ -6,10 +6,9 @@
     max-width: 100% !important;
 }
 
-    position: relative;
 .iframe-container {
     width: 100%;
-    height: 20em;
+    text-align: right;
 
     iframe, object {
         height: 100%;
@@ -19,9 +18,9 @@
     }
 
     .new-tab-icon {
-        position: absolute;
-        top: 1em;
-        right: 2em;
+        position: relative;
+        top: -1em;
+        display: inline-block;
         padding: 0;
 
         svg {
@@ -34,8 +33,13 @@
 .go-live-section {
     margin-bottom: 2em;
 
-        padding: 1em;
     .iframe-container {
+        position: relative;
+        top: -1em;
+
+        iframe, object {
+            height: 20em;
+        }
     }
 
     .thumbnailContainer {
