Make the content item form buttons sticky on the bottom

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
@@ -6,6 +6,10 @@
     max-width: 100% !important;
 }
 
+.admin-panel-container .button-container {
+    text-align: center;
+}
+
 .iframe-container {
     width: 100%;
     text-align: right;
