--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -63,13 +63,15 @@
 
     .upload-icon-container {
         position: absolute;
-        top: 0;
+        top: .4rem;
         right: .25rem;
         display: flex;
         flex-flow: row nowrap;
         justify-content: center;
         align-items: center;
-        height: 3.5rem;
+        height: 2.7rem;
+        padding-left: 1.5em;
+        background-image: linear-gradient(90deg, rgba($white, .4), rgba($white, .8), $white);
 
         .upload-icon {
             height: 1.5rem;
@@ -158,7 +160,7 @@
         }
 
         .upload-icon-container {
-            height: 2.5em;
+            height: 2em;
         }
 
         .thumbnail-preview {
