Add a warning status message to cards
Also add status message text on hover to the status message.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_card.scss
@@ -70,12 +70,9 @@
             font-size: 0.8rem;
         }
 
-        &.status-9 {
-            display: block;
-            background-color: $orange;
-        }
-
-        &.status-10 {
+        &.status-9,
+        &.status-10,
+        &.status-80 {
             display: block;
             background-color: $orange;
         }
