Move expansion icon to the bottom
Do this so that the card expansion icon doesn't sit too close to the status expansion icon

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/card.scss
@@ -59,11 +59,17 @@
     }
 }
 
-.status-top {
+.task-status-message {
+    margin: .5em 0;
+    font-size: .9em;
+    font-style: italic;
+}
+
+.status-bot {
     display: flex;
     flex-flow: row nowrap;
 
-    .status-name {
+    .initiated-by {
         flex: 1 1 auto;
     }
 
