Fix height of iframe-container in pre-live summary

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/content-publishing/content-publishing.scss
@@ -40,6 +40,7 @@
     .iframe-container {
         position: relative;
         top: -1em;
+        height: auto;
 
         iframe, object {
             height: 20em;
