make readonly checkboxes look disabled
Because they are not able to be changed in this state anyway

addresses https://indy-github.milliman.com/PRM/Milliman-Access-Portal/issues/1183

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/components/_admin-panel.scss
@@ -234,20 +234,21 @@
 
     &.readonly {
         cursor: default;
+        color: lighten($charcoal, 30%);
 
         .selection-option-checkmark {
             cursor: default;
         }
 
         .selection-option-value:checked ~ .selection-option-checkmark {
-            background-color: $dark-grey;
+            background-color: lighten($grey, 10%);
         }
 
         &:hover .selection-option-value ~ .selection-option-checkmark {
             background-color: $grey;
         }
         &:hover .selection-option-value:checked ~ .selection-option-checkmark {
-            background-color: $dark-grey;
+            background-color: lighten($grey, 10%);
         }
     }
 }
