disallow resizing of textarea
to prevent issue of pulling outside of box

https://indy-github.milliman.com/PRM/Milliman-Access-Portal/issues/1192

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -249,6 +249,7 @@
                 left: 0;
                 height: 100%;
                 width: 100%;
+                resize: none;
                 font-size: 1.25rem;
                 border: none;
                 background-color: transparent;
