--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -241,6 +241,10 @@
             background-color: $white;
             margin: 0;
 
+            textarea.form-input {
+                resize: none;
+            }
+            
             input.form-input,
             textarea.form-input,
             select.form-input {
@@ -249,7 +253,6 @@
                 left: 0;
                 height: 100%;
                 width: 100%;
-                resize: none;
                 font-size: 1.25rem;
                 border: none;
                 background-color: transparent;
