Don't show pointer cursor on disabled thumbnail image

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -133,6 +133,10 @@
             background-color: $off-white !important;
         }
 
+        &.thumbnail img.thumbnail-preview {
+            cursor: default;
+        }
+
         .form-input-label,
         .form-input {
             color: $grey !important;
