Fix IE height="auto" issue
No one seems to know why this works, but it fixes the issue in IE.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -170,6 +170,7 @@
         .thumbnail-preview {
             width: 100%;
             height: auto;
+            min-height: 1px;
             cursor: pointer;
             border: 1px solid $charcoal;
             border-top: none;
