Add welcome and help text for users with no content
so that they aren't questioning where they are and what they should be seeing. It also gives them an action item of contacting support if they think it is incorrect

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map_modules/_general.scss
@@ -26,6 +26,15 @@ body {
     }
 }
 
+.welcome-text {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    margin: 10vh 2vw;
+}
+
 @include for-tablet-down {
     .hide-for-tablet-down {
         display: none;
