Add some new styling

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@@ -48,8 +48,18 @@
         width: 1.5em;
     }
 
+    td.add-user {
+        svg {
+            color: $green;
+        }
+
+        .action-icon-container-inline {
+            margin: 0 !important;
+        }
+    }
+
     td.remove-user {
-        
+
         svg {
             color: $red;
 
