Make the input text match the group name text

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@@ -32,9 +32,9 @@
         }
     }
 
-    th.content-center,
-    td.content-center {
-        text-align: center;
+    .group-name-input {
+        font-weight: bold;
+        color: $charcoal;
         padding: 0;
     }
 
