Dont' allow multiple groups to be created without being completed

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@@ -101,6 +101,18 @@
                     color: $green;
                     font-weight: bold;
                 }
+
+                &.disabled {
+                    cursor: default;
+
+                    .table-icon {
+                        color: $grey;
+                    }
+
+                    .action-text {
+                        color: $grey;
+                    }
+                }
             }
 
             td {
