Make the group dividers lighter

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@@ -83,7 +83,7 @@
 
             &.last-group-row,
             &.action-row {
-                border-bottom: 1px solid $charcoal;
+                border-bottom: 1px solid $grey;
             }
 
             &.last-group-row td {
