Cap the width that the name field can occupy

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@@ -14,6 +14,12 @@
                 width: 2em;
             }
 
+            &.col-name {
+                max-width: 12em;
+                width: 12em;
+                min-width: 8em;
+            }
+
             &.col-permission-download,
             &.col-permission-upload,
             &.col-permission-delete {
