--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -1,10 +1,25 @@
 ﻿@import "../../map_modules/variables";
 @import "../../map_modules/mixins";
 
+.admin-panel-content-container {
+    display: flex;
+    flex-flow: column nowrap;
+
+
+    .activity-log-table-header {
+        flex: 0 0 auto;
+    }
+    
+    form {
+        flex: 1 0 100%;
+        display: flex;
+        flex-flow: column nowrap;
+    }
+}
+
 .activity-log-table-header {
     display: flex;
     flex-flow: row nowrap;
-    width: 100%;
     padding: .25em .25em 0;
     align-items: flex-end;
 
@@ -16,5 +31,17 @@
         flex: 0 0 auto;
         padding: .25em !important;
         font-weight: 100 !important;
+    }
+}
+
+table {
+    width: 100%;
+
+    thead {
+        border-bottom: 2px solid $charcoal;
+
+        tr th {
+            padding-bottom: .5em;
+        }
     }
 }
