--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -11,7 +11,7 @@
     }
     
     form {
-        flex: 1 0 100%;
+        flex: 1 1 auto;
         display: flex;
         flex-flow: column nowrap;
     }
