--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
@@ -8,12 +8,18 @@
 
         td {
             padding-top: 1em;
-            padding: 1.5em 0 .5em;
+            padding: .5em 0;
         }
+
 
         &:first-child {
             margin-top: 0;
             border-top: none;
+        }
+
+        .username {
+            font-size: .8em;
+            font-style: italic;
         }
     }
 
