style the text in activity log
also made an update in the permissions table to match the font size used. Wanted to make this a clean style where we emphasize the actions that took place over everything else, while still showing all valuable information

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
@@ -8,7 +8,8 @@
 
         td {
             padding-top: 1em;
-            padding: .5em;
+            padding: .75em;
+            font-size: .875rem;
         }
 
 
@@ -18,11 +19,8 @@
         }
 
         .username {
-            font-size: .8em;
+            font-size: .95em;
+            opacity: .85;
         }
-    }
-
-    .event-details {
-        font-size: .9em;
     }
 }
