--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/permissions-table.scss
@@ -119,6 +119,7 @@
             td {
                 padding-top: .25em;
                 padding-bottom: .25em;
+                font-size: .875rem;
 
                 .selection-option-container {
                     justify-content: center;
