--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -29,8 +29,10 @@
 
     .download-button {
         flex: 0 0 auto;
-        padding: .25em !important;
-        font-weight: 100 !important;
+        padding: .5em 1em !important;
+        font-weight: 400 !important;
+        letter-spacing: .03em;
+        font-size: .875em;
     }
 }
 
