set a max-width for the author column in activity log
so that the table doesn't run over for smaller windows. Add hover text to tell the user what the values are in case they are cut off

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
@@ -22,5 +22,12 @@
             font-size: .95em;
             opacity: .85;
         }
+
+        .name-max-width {
+            max-width: 150px;
+            width: auto;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 }
