set the date column width
so that it stays smaller to accommodate the description column better. Also prevents awkward wrapping if the column gets too small

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
@@ -23,6 +23,10 @@
             opacity: .85;
         }
 
+        .date-width {
+            width: 84px;
+        }
+
         .name-max-width {
             max-width: 150px;
             width: auto;
