--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/activity-log-table.scss
@@ -33,5 +33,16 @@
             overflow: hidden;
             text-overflow: ellipsis;
         }
+
+        @mixin sentence-case() {
+            text-transform: lowercase;
+            &:first-letter {
+                text-transform: uppercase;
+            }
+        }
+
+        .action-text {
+            @include sentence-case();
+        }
     }
 }
