--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -47,3 +47,50 @@ table {
         }
     }
 }
+
+.activity-log-table {
+
+    .event-row {
+        border-top: 1px solid $grey;
+
+        td {
+            padding-top: 1em;
+            padding: .75em;
+            font-size: .875rem;
+        }
+
+
+        &:first-child {
+            margin-top: 0;
+            border-top: none;
+        }
+
+        .username {
+            font-size: .95em;
+            opacity: .85;
+        }
+
+        .date-width {
+            width: 84px;
+        }
+
+        .name-max-width {
+            max-width: 150px;
+            width: auto;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        @mixin sentence-case() {
+            text-transform: lowercase;
+
+            &:first-letter {
+                text-transform: uppercase;
+            }
+        }
+
+        .action-text {
+            @include sentence-case();
+        }
+    }
+}
