Set a common width of the first two tables in the settings tab to improve alignment

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -103,3 +103,10 @@ table {
     opacity: 0;
     height: 1px;
 }
+
+.sftpConnectionInfoTable,
+.sftpCredentialsTable {
+    tr > td:first-child {
+        width: 13em;
+    }
+}
