--- a/Documentation/_CSS/style.css
+++ b/Documentation/_CSS/style.css
@@ -6,6 +6,17 @@ body {
 .accordion {
     background-color: #0095FF;
     color: white;
+header {
+    width: 100%;
+    height: 48px;
+    background: #39414D;
+    border-bottom: 1px solid #22272E;
+}
+
+header img {
+    max-width: 250px;
+    padding: 16px;
+}
     cursor: pointer;
     padding: 18px;
     width: 100%;
