--- a/Documentation/_CSS/style.css
+++ b/Documentation/_CSS/style.css
@@ -1,6 +1,8 @@
 body {
-    padding: 0 1em;
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    color: #39414D;
+    font-size: 14px;
+    margin: 0;
 }
 
 .accordion {
