--- a/Documentation/_CSS/style.css
+++ b/Documentation/_CSS/style.css
@@ -5,9 +5,16 @@ body {
     margin: 0;
 }
 
-.accordion {
-    background-color: #0095FF;
-    color: white;
+.body-content {
+    max-width: 800px;
+    margin: 50px auto;
+}
+
+p {
+    margin: 0 0 .5em 0;
+    line-height: 20px;
+}
+
 header {
     width: 100%;
     height: 48px;
@@ -19,24 +26,37 @@ header img {
     max-width: 250px;
     padding: 16px;
 }
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: whitesmoke;
-    text-align: left;
-    outline: none;
-    font-size: 15px;
-    transition: .4s;
-    border-top: 1px solid #DFE8E8;
+
+button {
+    display: flex;
+    flex-flow: row nowrap;
 }
 
-.active, .accordion:hover {
-    background-color: #0079D1;
-    color: white;
+button p {
+    flex-grow: 2;
+    margin: 0;
+}
+
+.accordion, .accordion:active, .active {
+    background-color: #fff;
+    color: #39414D;
+    cursor: pointer;
+    padding: 10px 16px;
+    width: 100%;
+    border: #E8E9EA;
+    text-align: left;
+    outline: none;
+    font-size: 16px;
+    transition: .4s;
+    border-top: 1px solid #E8E9EA;
+}
+
+.accordion:hover {
+    background-color: #E8E9EA;
 }
 
 .content {
-    padding: 0 24px;
+    padding: 0 16px;
     max-height: 0;
     background-color: white;
     overflow: hidden;
@@ -48,12 +68,28 @@ header img {
     max-height: 100em;
 }
 
+.icon {
+    max-height: 14px;
+    max-width: 14px;
+    color: #39414D;
+    align-self: center;
+}
+
+.rotate {
+    transform: rotate(180deg);
+}
+
 h3.subheading {
-    font-size: 16px;
+    font-size: 14px;
+    font-weight: 400;
     color: #444;
-    font-weight: bold;
-    border-bottom: 1px solid #DFE8E8;
-    padding-bottom: 6px;
+    padding: 4px 0;
+    margin: 0;
+}
+
+ol, ul {
+    padding: 0 0 16px 28px;
+    margin: 0;
 }
 
 ol li {
@@ -73,7 +109,8 @@ ul li {
 }
 
 li {
-    padding: 6px 0;
+    padding: 2px 0;
+    line-height: 20px;
 }
 
 a {
