--- a/Documentation/_CSS/style.css
+++ b/Documentation/_CSS/style.css
@@ -12,7 +12,7 @@ body {
 
 p {
     margin: 0 0 .5em 0;
-    line-height: 20px;
+    line-height: 24px;
 }
 
 header {
@@ -25,6 +25,14 @@ header {
 header img {
     max-width: 250px;
     padding: 16px;
+}
+
+h1 {
+    font-family: 'Open Sans Light', 'Open Sans', sans-serif;
+    font-weight: 300;
+    font-size: 42px;
+    line-height: 50px;
+    margin: 1rem 0;
 }
 
 button {
@@ -64,8 +72,10 @@ button p {
 }
 
 .content.show {
-    transition: 1.5s;
+    transition: 1.0s;
     max-height: 100em;
+    border-left: 4px solid rgba(0,128,226,.75);
+    margin: 0px 16px 12px 18px;
 }
 
 .icon {
@@ -80,7 +90,8 @@ button p {
 }
 
 h3.subheading {
-    font-size: 14px;
+    font-size: 1.25rem;
+    line-height: 1.625rem;
     font-weight: 400;
     color: #444;
     padding: 4px 0;
