Revamp the way that user guides are generated
This switch uses a template to load the user guides into, and allows us to compile two separate html files into one for the File Drop Admin user guide.

--- a/Documentation/_CSS/style.css
+++ b/Documentation/_CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
 body {
     font-family: 'Open Sans', sans-serif;
     color: #39414D;
@@ -35,12 +37,12 @@ h1 {
     margin: 1rem 0;
 }
 
-button {
+.accordion {
     display: flex;
     flex-flow: row nowrap;
 }
 
-button p {
+.accordion p {
     flex-grow: 2;
     margin: 0;
 }
