Give a better message when filtering results in zero results
This should address issue #1336

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/authorized-content/authorized-content.scss
@@ -55,5 +55,14 @@
                 border-bottom: 2px solid $charcoal;
             }
         }
+
+        .filter-error-msg-header,
+        .filter-error-msg {
+            text-align: center;
+        }
+
+        .filter-error-msg-header {
+            margin-top: 2em;
+        }
     }
 }
