Add styling to the files-table-container class to give it some size
I wasn't able to test this due to issues running the application.

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/file-drop.scss
@@ -115,3 +115,10 @@ table {
     font-size: .775em;
     margin-left: 1.25em;
 }
+
+.files-table-container {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 1em;
+}
