--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/card.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/card.scss
@@ -5,3 +5,21 @@
     font-size: .9em;
     font-style: italic;
 }
+
+.card-status-container.status-message,
+.card-status-container.status-informational,
+.card-status-container.status-error {
+    display: block;
+}
+
+.card-status-container.status-message {
+    background-color: $green;
+}
+
+.card-status-container.status-informational {
+    background-color: $orange;
+}
+
+.card-status-container.status-error {
+    background-color: $red;
+}
