--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -1,18 +1,64 @@
 ﻿@import "../../map_modules/variables";
 
-.folder-content-table {
+.breadcrumb-container {
+    margin-bottom: 1em;
 
-    .col-actions {
-        text-align: right;
-        
-        .menu-icon {
+    .breadcrumb-link {
+        &.current {
+            font-weight: bold;
+        }
+
+        &:not(.current) {
+            color: $blue;
+            background-color: transparent;
             cursor: pointer;
+
+            &:hover, &:active {
+                color: darken( $blue, 15% );
+                text-decoration: none;
+            }
         }
     }
 }
 
-.content-type-icon,
-.menu-icon {
-    height: 1em;
-    width: 1em;
+.folder-content-table {
+
+    .col-actions {
+        text-align: right;
+
+        .menu-icon {
+            cursor: pointer;
+        }
+    }
+
+    .file-icon,
+    .folder-icon {
+        width: 2em;
+    }
+
+    .content-type-icon,
+    .menu-icon {
+        height: 1.25em;
+        width: 1.25em;
+    }
+
+    tr {
+        border-bottom: 1px solid $grey;
+
+        td {
+            padding: .5em 0;
+        }
+    }
+
+    .folder,
+    .file-download {
+        color: $blue;
+        background-color: transparent;
+        cursor: pointer;
+
+        &:hover, &:active {
+            color: darken( $blue, 15% );
+            text-decoration: none;
+        }
+    }
 }
