--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/file-drop/folder-contents.scss
@@ -1,6 +1,7 @@
 ﻿@import "../../map_modules/variables";
 
 .breadcrumb-container {
+    margin-top: -.5em;
     margin-bottom: 1em;
 
     .breadcrumb-link {
@@ -40,6 +41,20 @@
     .menu-icon {
         height: 1.25em;
         width: 1.25em;
+    }
+
+    .col-file-size {
+        width: 5em;
+        text-align: right;
+    }
+
+    .col-date-modified {
+        width: 7em;
+        text-align: right;
+    }
+
+    .col-actions {
+        width: 5em;
     }
 
     tr {
