Added Carbon UI

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/map.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/map.scss
@@ -13,3 +13,5 @@
 
 @import "../../node_modules/react-redux-toastr/src/styles/index";
 @import "map_modules/toastr_overrides";
+
+@import 'carbon-components/scss/globals/scss/styles.scss';
