Modified a few cosmetic issues

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/login/login-step-two.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/login/login-step-two.scss
@@ -13,8 +13,12 @@
   }
 }
 
+.form-contents {
+    padding: 0.25em;
+}
+
 .button-container {
-  text-align: center !important;
+    text-align: center !important;
 }
 
 footer {
