Made 'reset password' email button more appropriate

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/shared-components/form-elements.scss
@@ -414,6 +414,12 @@
     text-align: right;
 }
 
+.button-left {
+    float: left;
+    margin-left: 0px;
+    padding-left: 0.5em !important;
+}
+
 .form-element-container,
 .button-container {
     position: relative;
