--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/progress-indicator.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/progress-indicator.scss
@@ -1,7 +1,7 @@
 ﻿@import "../../map_modules/variables";
 
 .progress-indicator-container {
-    margin: .5em 0;
+    margin: .5em 0 2rem;
     padding: 1.5em 3em;
     display: flex;
     flex-flow: row wrap;
