Add some styling to help with the new Content Item tables

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -99,6 +99,10 @@
             }
         }
 
+        .last-of-group {
+            border-bottom: 1px solid $light-grey;
+        }
+
         .center-text {
             text-align: center;
         }
