Switch a CSS class name to be more reuseable

--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -99,8 +99,8 @@
             }
         }
 
-        .last-of-group {
-            border-bottom: 1px solid $light-grey;
+        .table-row-divider {
+            border-bottom: 1px solid $grey;
         }
 
         .center-text {
