--- a/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
+++ b/MillimanAccessPortal/MillimanAccessPortal/src/scss/react/client-access-review/client-access-review.scss
@@ -46,14 +46,21 @@
         }
     }
 
-    .detail-section {
+    .detail-section,
+    .details-container {
         margin: 0;
         padding: 0;
         margin-bottom: 2.5rem;
 
-        .detail-label,
-        .detail-value,
-        .detail-value-name,
+        .detail-title {
+            margin: 0 0 1em;
+            font-size: 1.25em;
+            font-weight: bold;
+        }
+        
+        .detail-label, 
+        .detail-value, 
+        .detail-value-name, 
         .detail-value-email {
             display: block;
         }
@@ -86,6 +93,7 @@
 
     .access-review-table {
         width: 100%;
+        margin-bottom: 2em;
 
         thead {
             background-color: $light-grey;
@@ -107,6 +115,11 @@
             text-align: center;
         }
 
+        .detail-value-name,
+        .detail-value-email {
+            display: inline-block;
+        }
+
         .detail-value-name {
             font-size: 1.1em;
             font-weight: bold;
@@ -115,6 +128,7 @@
         .detail-value-email {
             font-size: .9em;
             font-style: italic;
+            margin-bottom: .5em;
         }
     }
 }
